--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
-
+aiohttp==3.7.3
+async-timeout==3.0.1
+attrs==20.3.0
+certifi==2021.10.8
+chardet==3.0.4
+charset-normalizer==2.0.11
+discord==1.0.1
+discord.py==1.6.0
+docopt==0.6.2
+idna==3.1
+multidict==5.1.0
+pipreqs==0.4.11
+requests==2.27.1
+typing-extensions==3.7.4.3
+urllib3==1.26.8
+yarg==0.1.9
+yarl==1.6.3
